--- a/style.css
+++ b/style.css
@@ -26,11 +26,13 @@ body{
 }
 
 .logo{
+  position: relative;
   font-size: 25px;
   font-weight: 700;
   color: #ededed;
   text-decoration: none;
 }
+
 
 .navbar a{
   font-size: 18px;
@@ -50,7 +52,7 @@ body{
 
 .home{
   height: 100vh;
-  background: url(img/Untitled-4.jpg) no-repeat;
+  background: url(img/Untitled-1.jpg) no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
@@ -188,3 +190,20 @@ body{
 .home-sci a:hover::before {
   width: 100%;
 }
+
+.home-imghover{
+  position: absolute;
+  top: 0;
+  right: 30px;
+  width: 580px;
+  height: 100%;
+  background: transparent;
+
+  transition: 3s;
+}
+
+.home-imghover:hover {
+  background: #081b29;
+  opacity: .8;
+}
+
